# Tesi_Magistrale

./: README.md
choirbot/: package.xml
choirbot/choirbot/communicator/: communicator.py
choirbot/choirbot/utils/: FALKO_algorithm.py  keypoint_detector.py
choirbot/choirbot/webots_plugin/: motor_ctrl.py  motor_ctrl_unicycle.py
choirbot_examples/: Arosco.py  iMESA.py  iMESA_FALKO.py  iMESA_launcher.py  package.xml  se2_graph.g2o  setup.py
choirbot_examples/choirbot_examples/: plotter.py
choirbot_examples/choirbot_examples/FALKO/: CCDAMatcher.py  FALKO_algorithm.py  Matcher.py  README.md  keypoint_detector.py  keypoint_matcher.py  plotter.py
choirbot_examples/choirbot_examples/FALKOcollabSLAM/: guidance.py
choirbot_examples/choirbot_examples/collabSLAM/: controller.py  guidance.py  simple_guidance.py
choirbot_examples/launch/: FALKO_webots.launch.py  FALKOcollabSLAM.launch.py  collabSLAM.launch.py  formationcontrol_ca_webots.launch.py  goto_webots.launch.py
choirbot_examples/resource/: config.rviz  turtlebot_unicycle.urdf
choirbot_examples/worlds/: .Test_world.wbproj  Test_world.wbt  Wall.wbo  empty_FALKO_world.wbt  empty_mapping_world.wbt  empty_world.wbt  obj_target.wbt
choirbot_interfaces/: CMakeLists.txt  package.xml
choirbot_interfaces/msg/: Keypoint.msg  KeypointArray.msg  KeypointMatch.msg  KeypointPair.msg
docker/: Dockerfile  README.md  buildImage  choirbot_requirements.txt  createContainer  final_setup.sh
videos/: Screencast from 05-09-2025 16:00:30.webm  Screencast from 05-09-2025 16:03:33.webm  Screencast from 05-09-2025 16:12:46.webm
(+7 files in other folders)
